# AI-MR.VERMA

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  AUTONOMOUS_COMPLETE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DOCKER_README.md  DOCKER_UPDATE_SUMMARY.md  ENHANCED_SYSTEM_SUMMARY.md  ENHANCEMENTS.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  Modelfile.base  NEXT_STEPS_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README-ENHANCED.md  README.md  README_AUTONOMOUS.md  README_DOCUMENTS.md  README_ENHANCED.md  README_ULTIMATE.md  README_UNIFIED.md  START_AUTONOMOUS.bat  START_DOCUMENTS.bat  START_ENHANCED.bat  START_ULTIMATE.bat  UNIFIED_SUMMARY.md  VERIFICATION_REPORT.md  dashboard_live.py  dashboard_web.py  docker-compose.yml  index.js  launch_full_system.py  opencodespec.yaml  package-lock.json  package.json  (+8 more)
.agent/: GEMINI.md  consolidation_plan.md
.agent/agents/: agent-perfectionist.md  ai-researcher.md  antigravity-platform-expert.md  backend-specialist.md  business-architect.md  cloud-native-expert.md  data-science-agent.md  knowledge-expert.md  mobile-developer.md  orchestrator.md  penetration-tester.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  test-engineer.md
.agent/scripts/: hyper_stress.py  interconnect_system.py
.agent/unified/: CONSOLIDATION_COMPLETE.md  CONSOLIDATION_REPORT.md  DIRECTORY_RESTRUCTURE_PLAN.md  INTEGRATION_SUMMARY.md  README.md
.agent/workflows/: 2d-games.md  3d-games.md  agent-perfectionist.md  ai-pipeline.md  ai-rag-pipeline.md  ai-sdk.md  analytics-tracking.md  api-security-best-practices.md  app-builder.md  async-python-patterns.md  backend-forge.md  backend-specialist.md  brain-lightning-sync.md  building-native-ui.md  business-architect.md  canvas-design.md  cloud-native-expert.md  conversation-memory.md  convex.md  cost-optimization.md  create-auth-skill.md  creative-studio.md  data-ops.md  database-optimizer.md  debugger.md  deploy.md  devops-engineer.md  (+57 more)
.claude/: settings.local.json
PRODUCT DOCUMT/: USER_GUIDE.md
agent-lightning-local/: .dockerignore  Dockerfile.agl  Dockerfile.collector  Dockerfile.trainer  README.md  SYSTEM_CONTEXT.md  dashboard.py  docker-compose.yml  interaction_collector.py  requirements.collector.txt  requirements.txt  reward_engine.py  sft_trainer.py  skills_manager.py  terminal_chat.py  train_loop.py  vector_services.py  verify_opencode_alias.py
agents/: __init__.py  base_agent.py  frontend_cluster.py  intelligence_cluster.py  platform_cluster.py  swarm_node.py
config/: verma.yaml
core/: __init__.py  agent-registry.js  application-builder.js  chat-interface.js  context_compressor.py  dependency_graph.py  enhanced-orchestrator.js  env_manager.py  evolution.py  input_sanitizer.py  local-llm.js  maintenance.py  mcp_hub.py  memory_service.py  orchestrator.js  orchestrator.py  platform-adapter.js  plugin_orchestrator.py  processing_unit.py  rate_limiter.py  routing.py  sandbox.js  security_orchestrator.py  self_healing.py  skills-loader.js  socratic_gate.py  startup.js  task_queue.py  thermal_governor.py  toolkit.py  traeai-integration.js  vibecoding-agent.js  vulnerability_listener.py  workflow-engine.js
dashboard/: package-lock.json  package.json
docker/: Dockerfile.collector  Dockerfile.trainer  docker-compose.yml
documentation/: AGENTS.md  System_Works_Intro.md  User_Guide_Non_Tech.md  agent-orchestration-gap-analysis-report.md  api-integration-documentation.md  cross-platform-synchronization-architecture.md  product-requirements-document.md  project-rfq-materials.md  system-architecture-documentation.md  technical-evolution-analysis.md
logs/: development_roadmap.md  evolution_roadmap.md
mr_verma/: __init__.py
scripts/: cleanup.sh  docker-entrypoint.sh  generate_agent_workflows.py  install_dependencies.bat  interconnect_workflows.py  profile_memory.py  research_kimi.py  run_deep_analysis.py  run_maintenance.py  seed_test_data.py  test_kimi.py  test_milvus.py  test_runner.py  update_agent_personas.py  validate-docker.sh
tests/: debug_import.py  dual_engine_test_suite.py  test_ai_analyst.py  test_analyst_recall.py  test_basic.py  test_data_scientist_ai.py  test_design_muse.py  test_fix_and_heal.py  test_hybrid_execution.py  test_memory_search.py  test_nvidia_api.py  test_primary_glm5.py  test_production_healing.py  test_secondary_nvidia.py  test_security_ai.py  test_security_hardened.py  test_socratic_gate.py  verify_healing_ai.py
tools/: ingest_memory.py
unified/: autonomous_toolkit.py  code_generator.py  document_generation.py  main.py  mrverma.py  mrverma_autonomous.py  mrverma_enhanced.py  mrverma_ultimate.py  platform_adapters.py  schema_manager.py  template_engine.py  vector_store.py  verify_adapters.py  verify_autonomous.py  verify_generation.py  verify_integration.py  workflow_example.py
(+804 files in other folders)
